components/operators/gpu-operator-certified/instance/components/aws-nvidia-a100-gpu-machineset/patch-gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  devicePlugin:
    config:
      default: A100-24G
      name: device-plugin-config
  gfd:
    enabled: true
  mig:
    strategy: mixed
  migManager:
    config:
      name: custom-mig-config
